--- a/composer.json
+++ b/composer.json
@@ -22,5 +22,12 @@
     "require-dev": {
         "phpunit/phpunit": "^7.0"
     },
-    "scripts": {}
+    "scripts": {},
+    "autoload": {
+        "autoload": {
+            "psr-4": {
+                "Acme\\": "src/"
+            }
+        }
+    }
 }
