--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
     "autoload": {
         "autoload": {
             "psr-4": {
-                "Acme\\": "src/"
+                "ValenceWrapper\\": "src/"
             }
         }
     }
