--- a/composer.json
+++ b/composer.json
@@ -20,9 +20,12 @@
         "Desire2Learn-Valence/valence-sdk-php": "~1.6"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.0"
+        "phpunit/phpunit": "^7.0",
+        "codedungeon/phpunit-result-printer": "^0.23.4"
     },
-    "scripts": {},
+    "scripts": {
+        "test": "phpunit"
+    },
     "autoload": {
         "psr-4": {
             "ValenceWrapper\\": "src/"
