--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     "minimum-stability": "stable",
     "require": {
         "php": ">=5.6.0",
-        "Desire2Learn-Valence/valence-sdk-php": "~1.6"
+        "Desire2Learn-Valence/valence-sdk-php": "~1.6",
+        "guzzlehttp/guzzle": "^6.3"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.0",
