--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "ktrist/valence-wrapper",
+    "name": "kerbeh/valence-wrapper",
     "description": "Wrapper for the Brightspace Valence API SDK",
     "type": "library",
     "authors": [
@@ -18,7 +18,8 @@
     "require": {
         "php": ">=5.6.0",
         "brightspace/valence-sdk-php": "~1.6",
-        "guzzlehttp/guzzle": "^6.3"
+        "guzzlehttp/guzzle": "^6.3",
+        "psr/http-factory": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.0",
