--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,7 @@
     "require": {
         "php": ">=5.6.0",
         "brightspace/valence-sdk-php": "~1.6",
-        "guzzlehttp/guzzle": "^6.3",
-        "psr/http-factory": "^1.0"
+        "guzzlehttp/guzzle": "^6.3"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.0",
